fix GUI TCP + rmi asincrono